# LVGL

./: README.md
ChunJiIn/: test_compound_vowels
ChunJiIn/Source/: CMakeLists.txt  install_freetype_deps.sh  test_compound_vowels.c
ChunJiIn/Source/include/: chunjiin_input.h  font_config.h  tab_chunjiin.h  tab_info.h  tab_number.h  tab_settings.h  ui_callbacks.h
ChunJiIn/Source/src/: chunjiin_input.c  korean_input.c  tab_chunjiin.c  tab_db.c  tab_korean.c  ui_components.c
ChunJiInInput02/: run.sh
ChunJiInInput02/Source/: CMakeLists.txt  build_sqlcipher.sh
ChunJiInInput02/Source/include/: chunjiin_input.h  font_config.h  tab_chunjiin.h  ui_components.h
ChunJiInInput02/Source/sqlcipher/: jimsh
ChunJiInInput02/Source/src/: chunjiin_input.c  main.c  tab_chunjiin.c  tab_korean.c  tab_number.c  ui_components.c
HelloWorld/: HowTo.md  lv_conf.h
HelloWorld/Source/: CMakeLists.txt  main.c
JongSeungKeypad/: HowTo.md
JongSeungKeypad/Source/: CMakeLists.txt  KOREAN_INPUT_GUIDE.md  KOREAN_INPUT_SUMMARY.md  KOREAN_KEYPAD_GUIDE.md  KOREAN_KEYPAD_SEPARATION.md
JongSeungKeypad/Source/include/: korean_hangul.h  ui_settings.h
JongSeungKeypad/Source/src/: korean_hangul.c  korean_test.c  main.c  ui_info.c  ui_korean_keypad.c  ui_main.c
KeyPad01/Source/include/: sqlite_test.h  ui_korean_keypad.h
KeyPad01/Source/koreankeypadtest/: .gitignore  Makefile  README.md  README_koreankeypadtest.md  build.sh  korean_hangul.c  korean_hangul.h  korean_test.c  koreankeypadtest
KeyPad01/Source/src/: ui_callbacks.c  ui_components.c  ui_number_keypad.c
KoreanIME/: .gitignore  API_REFERENCE.md  DOCUMENTATION.md  Makefile  QUICK_REFERENCE.md  README.md  demo_test.c  korean  korean.c  korean.h  main.c  test_korean  test_korean.c  test_simple  test_simple.c
KoreanInput/: run.sh
KoreanInput/Source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lvgl_main
KoreanInput/Source/include/: font_config.h  korean_input.h  tab_korean.h  ui_components.h
KoreanInput/Source/lvgl/: lv_conf.h
KoreanInput/Source/src/: korean_input.c  tab_info.c  tab_korean.c  tab_number.c  tab_settings.c  ui_components.c
KoreanKeyPad/Source/: CMakeLists.txt
KoreanKeyPad/Source/include/: korean_hangul.h  ui_callbacks.h  ui_components.h  ui_keypad.h  ui_korean_keypad.h  ui_main.h
KoreanKeyPad/Source/lvgl/: lv_conf.h
KoreanKeyPad/Source/lvgl/src/drivers/sdl/: lv_sdl_window.c
KoreanKeyPad/Source/sqlite/: mkkeywordhash
KoreanKeyPad/Source/src/: korean_hangul.c  main.c  ui_components.c  ui_keypad.c  ui_korean_keypad.c  ui_main.c
KoreanTab/: lvgl_main  run.sh
KoreanTab/Source/: CMakeLists.txt
KoreanTab/Source/include/: nanum_gothic_16.h  tab_db.h
KoreanTab/Source/lvgl/: lv_conf.h
KoreanTab/Source/sqlcipher/: mksourceid
KoreanTab/Source/src/: nanum_gothic_16.c  tab_info.c  tab_korean.c  ui_callbacks.c  ui_components.c
MenuBar/Source/: README_SQLite.md  main.c  sqlite_test.h  ui_components.c  ui_components.h
MenuBar/Source/sqlite/: jimsh
SQLCipher/Source/: CMakeLists.txt  SQLCIPHER_INTEGRATION_SUMMARY.md  sqlite_test.c  ui_components.c  ui_components.h
SQLCipher/Source/lvgl/: lv_conf.h
SQLite/Source/: CMakeLists.txt  main.c  sqlite_test.c  ui_components.c  ui_components.h
SecureDBMenuPad/Source/: CMakeLists.txt  README_SQLite.md  build_sqlcipher.sh  test_korean.c
SecureDBMenuPad/Source/IME/: korean.c  korean.h
SecureDBMenuPad/Source/include/: ui_callbacks.h  ui_database.h  ui_info.h  ui_korean.h  ui_main.h
SecureDBMenuPad/Source/sqlcipher/: src-verify
SecureDBMenuPad/Source/sqlite/: lemon
SecureDBMenuPad/Source/sqlite/tsrc/: parse.c
SecureDBMenuPad/Source/src/: sqlite_test.c  ui_components.c  ui_database.c  ui_korean.c  ui_main.c  ui_settings.c
